# BotTemplate

./: .gitignore  Makefile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.test.yml
tgbot/: .dockerignore  Dockerfile  __init__.py  __main__.py  config.py  loader.py  pyproject.toml
tgbot/db/: alchemy.py
tgbot/db/models/: user.py
tgbot/filters/: __init__.py  is_auth_code.py
tgbot/handlers/: __init__.py  start.py
tgbot/handlers/errors/: __init__.py  telegram_api.py
tgbot/middlewares/: __init__.py  authentification.py  auto_rm_inline_keyboard.py  autoremove.py  call_answer.py
tgbot/utils/: __init__.py  broadcast.py  cli.py  scheduler.py  states.py
